# fastapi-template

./: Dockerfile  README.md  alembic.ini  pyproject.toml
.github/workflows/: build.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yml  ingress.yml  migration.yml  service.yml
migrations/: env.py
migrations/versions/: 8f1ed7a1f8d4_add_example_table.py
src/fastapi_template/: app.py  middleware.py  settings.py
src/fastapi_template/commands/: reset.py  serve.py
src/fastapi_template/db/: dependency.py  manager.py
src/fastapi_template/db/models/: __init__.py  base.py  example.py
src/fastapi_template/models/: example.py
src/fastapi_template/routes/: __init__.py  example.py  health.py
src/fastapi_template/services/: example.py
tests/: conftest.py
tests/commands/: test_reset.py  test_serve.py
tests/routes/: test_example.py  test_health.py
