[tool.poetry]
name = "fastapi-template"
version = "0.0.0"
description = ""
authors = ["David Martin <dmartin2489@gmail.com>"]
packages = [{include = "fastapi_template", from = "src"}]

[tool.poetry.scripts]
reset = "fastapi_template.commands.reset:main"
serve = "fastapi_template.commands.serve:main"

[tool.poetry.dependencies]
python = "^3.10"

alembic = "^1.10.2"
asyncpg = "^0.27.0"
click = "^8.1.3"
fastapi = "^0.94.0"
pydantic = "^1.10.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.8"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.27.0"
black = "^22.12.0"
httpx = "^0.23.3"
mypy = "^0.991"
poethepoet = "^0.18.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
sqlalchemy = {extras = ["asyncio", "mypy"], version = "^2.0.8"}
testcontainers-postgres = "^0.0.1rc1"
types-pyyaml = "^6.0.12.9"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.coverage.report]
exclude_lines = ["if TYPE_CHECKING:"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: run all integration tests"
]

[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.poe.tasks]
build = ["format-check", "type-check", "tests"]
format = "black src/ tests/"
format-check = "black src/ tests/ --check"
tests = "pytest --cov=src --cov-report=term-missing --no-cov-on-fail"
type-check = "mypy src/ tests/"

migrate = "alembic upgrade head"
reset = "reset"
serve = "serve --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
